Atualização  do Projeto JPToken com banco de dados

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /JPToken/Interfaces01/nbproject/private/
 /JPToken/Interfaces01/build/
+/JPToken/build/
+/JPToken/banco/nbproject/private/
+/JPToken/banco/build/
+/JPToken/banco02/nbproject/private/
+/JPToken/banco02/build/
