--- a/JPToken/banco02/nbproject/project.properties
+++ b/JPToken/banco02/nbproject/project.properties
@@ -28,16 +28,15 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/JPToken.jar
+dist.jar=${dist.dir}/banco02.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/JPToken
+dist.jlink.output=${dist.jlink.dir}/banco02
 excludes=
-file.reference.postgresql-42.3.1.jar=postgresql-42.3.1.jar
+file.reference.postgresql-42.3.1.jar=..\\postgresql-42.3.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.postgresql-42.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -73,8 +72,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=JPToken
-main.class=telas.Janela
+jlink.launcher.name=banco02
+main.class=banco02.Banco02
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
